welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:6: error: type mismatch;
 found   : Unit
 required: Int
}else if (noDoubles==true && die1==die2){
      ^